Added: Functions for add theatre owners and generate a password for the owner then send these credentials to owners mail
Added: Functions for edit owners and delete owners

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,16 @@
 #adminProfile {
   border: 3px solid !important;
 }
+
+.btn {
+  box-shadow: none !important;
+}
+
+input {
+  box-shadow: none !important;
+}
+
+.serialNumber::before {
+  counter-increment: Serial !important;
+  content: counter(Serial) !important;
+}
