--- a/views/admin/users-management.hbs
+++ b/views/admin/users-management.hbs
@@ -20,7 +20,7 @@
                         <h3>Users List</h3>
                     </div>
                     <div class="card-body">
-                        <table class="table border" id="data-table">
+                        <table class="table border table-responsive-sm" id="data-table">
                             <thead class="bg-primary text-white">
                                 <tr>
                                     <th scope="col">ID</th>
@@ -32,7 +32,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <th scope="row">1</th>
+                                    <th scope="row" class="serialNumber"></th>
                                     <td>Mark</td>
                                     <td>mark@markweb.com</td>
                                     <td>22-November-2020</td>
