--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -18,7 +18,7 @@
                   <li class="user-info">
                     <h5 class="user-name">{{admin.name}}</h5>
                   </li>
-                  <li class="logout"> <a onclick="return confirm('Are you sure you want to logout ?')" href="/admin/logout"><i class="fa fa-power-off"></i> Logout</a> </li>
+                  <li class="logout"> <a onclick="logout(event, '/admin/logout')"><i class="fa fa-power-off"></i> Logout</a> </li>
                 </ul>
               </li>
             </ul>
