--- a/views/partials/success-alert.hbs
+++ b/views/partials/success-alert.hbs
@@ -1,5 +1,5 @@
 <div class="row justify-content-center m-0">
-    <div class="col-md-4 m-0">
+    <div class="col-md-4 m-0" id="alertBox">
         <div class="alert alert-success alert-dismissible fade show m-0 mt-5" id="alert" role="alert">
             {{alertMessage}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
