--- a/views/partials/theatre-header.hbs
+++ b/views/partials/theatre-header.hbs
@@ -11,14 +11,14 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="dropdownMenu3" aria-haspopup="true"
                   aria-expanded="false">
                   <div class="profile_img">
-                    <img src="{{#if admin.profilePic}}/images/admin/{{admin._id}}.jpg{{else}}/images/admin/admin-logo.png{{/if}}" class="rounded-circle" alt="" />
+                    <img src="{{#if theatre.ownerPic}}/images/theatre/{{theatre._id}}.jpg{{else}}/images/theatre/theatre-logo.png{{/if}}" class="rounded-circle" alt="" />
                   </div>
                 </a>
                 <ul class="dropdown-menu drp-mnu" aria-labelledby="dropdownMenu3">
                   <li class="user-info">
-                    <h5 class="user-name">{{admin.name}}</h5>
+                    <h5 class="user-name">{{theatre.ownerName}}</h5>
                   </li>
-                  <li class="logout"> <a type="button" onclick="logout(event, '/admin/logout')"><i class="fa fa-power-off"></i> Logout</a> </li>
+                  <li class="logout"> <a type="button" onclick="logout(event, '/theatre/logout')"><i class="fa fa-power-off"></i> Logout</a> </li>
                 </ul>
               </li>
             </ul>
