--- a/views/partials/theatre-sidebar.hbs
+++ b/views/partials/theatre-sidebar.hbs
@@ -4,11 +4,11 @@
 
         <!-- logo start -->
         <div class="logo">
-            <h1><a href="/admin">ADMIN</a></h1>
+            <h1><a href="/theatre">THEATRE</a></h1>
         </div>
 
         <div class="logo-icon text-center">
-            <a href="/admin" title="logo"><img src="/images/logo.png" alt="logo-icon"> </a>
+            <a href="/theatre" title="logo"><img src="/images/logo.png" alt="logo-icon"> </a>
         </div>
         <!-- //logo end -->
 
@@ -16,11 +16,11 @@
 
             <!-- sidebar nav start -->
             <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a href="/admin"><i class="fa fa-tachometer"></i><span> Dashboard</span></a>
+                <li class="active"><a href="/theatre"><i class="fa fa-tachometer"></i><span> Dashboard</span></a>
                 </li>
-                <li><a href="/admin/theater-management"><i class="fa fa-home"></i> <span>Theater Management</span></a></li>
-                <li><a href="/admin/users-management"><i class="fa fa-user"></i> <span>Users Management</span></a></li>
-                <li><a href="/admin/users-activity"><i class="fa fa-users"></i> <span>Users Activity Track</span></a></li>
+                <li><a href="/theatre/screens"><i class="fa fa-desktop"></i> <span>Screens</span></a></li>
+                <li><a href="/theatre/movie-management"><i class="fa fa-film"></i> <span>Movie Management</span></a></li>
+                <li><a href="/theatre/users-activity"><i class="fa fa-users"></i> <span>Users Activity Track</span></a></li>
             </ul>
             <!-- //sidebar nav end -->
             <!-- toggle button start -->
